@@ -7,6 +7,7 @@ Changes in Release 1.2.1
 [JXT-51] - In BasicParserPool, avoid throwing an EmptyStackException on empty cache case
 [JXT-52] - New ParserPool implementation that eliminates most locking by forgoing support for versioning and property mods over time
 [JXT-54] - Method add(index, element) for a subList (e.g. of a choicegroup) only append element.
+[JXT-55] - Namespace is not properly declared during marshalling if ancestor already declares a namespace with the same prefix but different URI
 [JXT-56] - XMLHelper erroneously creating DOM Attribute with Document createAttribute rather than createAttributeNS
 [JXT-57] - Deprecate SecurityHelperTest class in favor of moving methods over to main SecurityHelper class
 [JXT-59] - Add additional helper methods to XMLHelper to assist with more complex attribute marshalling and unmarshalling cases
